# simulation_exercise

./: .gitignore  LICENSE  Makefile  NLTK_Python_Tutorial_Text_Mining_Sentiment_Analysis_Python_Using_NLTK__NLTK_Tutorial__Simplilearn.txt  Notes.txt  Ollama_Mistral_Document reading.py  Ollama_trial_1.py  README.md  Speech UI try-out.ipynb  TTS.py  main.py  mistral_with_rag.py  pyproject.toml  test_of_ai_integration.py  tts_functions.py
Makefiles/darwin/: system_dependencies.sh
Makefiles/windows/: system_dependencies.ps1
ai_rag/: AI_RAG_updated_thu_13.py  Ollama_Mistral_Document reading.py  _Ollama_Mistral_Document reading.py  mistral_with_rag.py  model.py  prompt.py  templates.py  utils.py  vector_storage.py
ai_rag/pdf/: loader.py
ai_rag/pdf_folder/: Python_NLTK_Tutorial_1_-_Getting_started_with_NLTK.txt
chat_tutor/: .flake8  db.sqlite3  manage.py  pyproject.toml
chat_tutor/chat/: apps.py  chat_view.py  config.json  forms.py  models.py  setup_view.py  tts_view.py  urls.py  views.py
chat_tutor/chat/migrations/: 0001_initial.py
chat_tutor/chat_tutor/: asgi.py  settings.py  urls.py  wsgi.py
chat_tutor/hifigan_vocoder/: hyperparams.yaml
chat_tutor/media/files/: Learning sources python NLP.docx  Python_NLTK_Tutorial_2_-_Removing_stop_words_using_NLTK.txt  (+1 more)
chat_tutor/modules/ai_rag/: model.py  templates.py  utils.py  (+1 more)
hifigan_vocoder/: generator.ckpt
stt/: tts_functions.py
stt_tts/: tts_functions.py
tacotron_dir/: hyperparams.yaml  model.ckpt
ui/: ChatManager.cs  Disclaimbutton.cs  GameManager.cs  Quit.cs  ReadInput.cs  RecordAudio.cs  WavUtility.cs
(+12 files in other folders)
