[project]
name = "simulation-exercise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.21"
dependencies = [
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "numpy>=2.0.2",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "torch>=2.6.0",
]
