[project]
name = "simulation-exercise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.21"
dependencies = [
    "django>=4.2.20",
    "docarray>=0.41.0",
    "ipython>=8.18.1",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "numpy>=2.0.2",
    "ollama>=0.4.7",
    "openai-whisper>=20240930",
    "pandas>=2.2.3",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "soundfile>=0.13.1",
    "speechbrain>=1.0.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "whisper>=1.1.10",
]
